infrastructure/auth/oauth2-proxy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: https://auth.relyq.dev/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-User
      - X-Auth-Email
      - X-Auth-Request-User
      - Set-Cookie

    errorPage:
      url: https://auth.relyq.dev/oauth2/start
      query: "rd={url}"
