infrastructure/auth/oauth2-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - auth.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: oauth2-proxy
          kind: Service
          port: 80
